--- a/Assignment 3/style.css
+++ b/Assignment 3/style.css
@@ -5,7 +5,7 @@
   --color-surface: #ffffff;    
   --color-text: #0e0e0e;       
   --color-accent: #cd0202;     
-  --color-muted: #6c757d;
+  --color-muted: #082036;
 
 
   --font-base: 'Arial', sans-serif;          
